deployment/postgres/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fc-postgres
  namespace: federated-catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fc-postgres
  template:
    metadata:
      labels:
        app: fc-postgres
    spec:
      containers:
        - name: fc-postgres
          image: postgres:15.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: fc-postgres
      volumes:
        - name: fc-postgres
          persistentVolumeClaim:
            claimName: fc-postgres-claim
